# BranchDiffLib

./: CMakeLists.txt  README.md  branchdiff.c  branchdiff.h  build.sh
src/: branchdiff.c  branchdiff.h  rpmvercmp.c  rpmvercmp.h
